--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,9 @@
         </activity>
         <activity android:name=".PopupRegistActivity" android:theme="@android:style/Theme.Dialog">
         </activity>
-        <activity android:name=".PopupMapActivity" android:theme="@style/AppTheme.CustomTheme">
+        <activity android:name=".PopupMapActivity" android:theme="@style/AppTheme.popup_Map_Theme">
         </activity>
-        <activity android:name=".PopupTimeActivity" android:theme="@style/AppTheme.CustomTheme">
+        <activity android:name=".PopupTimeActivity" android:theme="@style/AppTheme.popup_Time_Theme">
         </activity>
 
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="63c2eeea64bff757d4f3fbb253f2ff59"/>
