--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
         </activity>
         <activity android:name=".PopupTimeActivity" android:theme="@style/AppTheme.popup_Time_Theme">
         </activity>
-
+        <activity android:name=".QrActivity"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="63c2eeea64bff757d4f3fbb253f2ff59"/>
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
