--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3@aar'
 }
