Module:app에 새로운 기능 추가 Scalable <-사용은 X

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.ssomai:android.scalablelayout:2.1.6'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation files('libs/libDaumMapAndroid.jar')
 
