개인정보수집동의 팝업 추가, 일부 레이아웃 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity android:name=".CheckActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".PopupAgreementActivity" android:theme="@android:style/Theme.Dialog"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".PopupRegistActivity" android:theme="@android:style/Theme.Dialog"
             android:screenOrientation="portrait">
         </activity>
