Module:app에 새로운 기능 추가 Scalable <-사용은 X

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
         <activity android:name=".PopupMapActivity" android:theme="@style/AppTheme.popup_Map_Theme"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".PopupCategory" android:theme="@style/AppTheme.popup_Map_Theme"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".PopupTimeActivity" android:theme="@style/AppTheme.popup_Time_Theme"
             android:screenOrientation="portrait">
         </activity>
