Ocr 팝업 추가, CheckActivity 버그 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name=".PopupAgreementActivity" android:theme="@android:style/Theme.Dialog"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".PopupOcrActivity" android:theme="@android:style/Theme.Dialog"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".PopupRegistActivity" android:theme="@android:style/Theme.Dialog"
             android:screenOrientation="portrait">
         </activity>
