--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-gson:1.23.0' exclude module: 'httpclient'
     implementation 'com.google.apis:google-api-services-vision:v1-rev9-1.21.0'
     implementation project(path: ':opencv')
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
