노티피케이션 추가(미완성) * 시간 새로고침 될 때마다 진동 울림 * 버튼 동작 안함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,8 @@
         <activity android:name=".TutorialActivity">
         </activity>
 
+        <service android:name=".NotiService"/>
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="63c2eeea64bff757d4f3fbb253f2ff59" />
