사진 추가 및 액티비티 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".OcrActivity"
             android:screenOrientation="portrait"></activity>
         <activity
+            android:name=".CompareActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name=".HelpNorActivity"
             android:screenOrientation="portrait"></activity>
         <activity
