--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".OcrActivity"
             android:screenOrientation="portrait"></activity>
         <activity
+            android:name=".ShowImageActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name=".CompareActivity"
             android:screenOrientation="portrait"></activity>
         <activity
